BUGFIX header horizontal scrollbar fixed, header font updated

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 .header {
   grid-column: 1/3;
   grid-row: 1/2;
-  width: 99%;
+  width: 100%;
   position: relative;
 }
 
@@ -46,7 +46,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   height: 100%;
-  width: 99.1vw;
+  width: 100%;
   height: 100%;
 }
 
@@ -61,7 +61,7 @@ body {
   text-decoration: none;
   color: white;
   font-size: 16px;
-  font-family: "Roboto", sans-Sans;
+  font-family: var(--Open-Sans);
   font-weight: 500;
   position: relative;
 }
@@ -107,7 +107,6 @@ body {
 .header-logo {
   width: 100%;
   position: absolute;
-  left: 1%;
   top: 6%;
 }
 
